[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Adam.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Adam.gd" type="Script" id=2]
[ext_resource path="res://Assets/CrouchSlash.png" type="Texture" id=3]
[ext_resource path="res://Src/Smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/foom_0.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/sword sound.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/hit1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/pickup.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/die1.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/PossessSound.wav" type="AudioStream" id=12]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 44, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 44, 160, 44, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 44, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 44, 192, 44, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 44, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 44, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 44, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 44, 32, 44, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 44, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 44, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 44, 224, 44, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 44, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 44, 256, 44, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 44, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 44, 288, 44, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 44, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 44, 64, 44, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 44, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 44, 96, 44, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 44, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 44, 128, 44, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 44, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 44, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 44, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 44, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Slash",
"speed": 15.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Run",
"speed": 9.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "CrouchSlash",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 5, 15 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 5.42, 13.257 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 12, 10 )

[node name="Adam" type="KinematicBody2D"]
light_mask = 3
collision_layer = 2
script = ExtResource( 2 )

[node name="GroundCast1" type="RayCast2D" parent="."]
position = Vector2( -2, 15 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="GroundCast2" type="RayCast2D" parent="."]
position = Vector2( 3, 15 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_top = 0.8

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PossessTime" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 28 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 29 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.309804, 0.803922, 0.109804, 1 )
position = Vector2( 0.334084, 0.779535 )
shape = SubResource( 30 )

[node name="SlashArea" type="Area2D" parent="."]
position = Vector2( 12, 0 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashArea"]
shape = SubResource( 31 )
disabled = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Smoke" parent="." instance=ExtResource( 4 )]

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
pitch_scale = 1.17

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0
pitch_scale = 2.0

[node name="SlashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -2.0

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 6.0

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -6.0

[node name="PossessSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 3.0

[connection signal="timeout" from="PossessTime" to="." method="_on_PossessTime_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="SlashArea" to="." method="_on_SlashArea_area_entered"]
[connection signal="body_entered" from="SlashArea" to="." method="_on_SlashArea_body_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
